# mudatasets

./: README.md  pyproject.toml
docs/source/: changelog.rst  conf.py  index.rst  install.rst
docs/source/api/: index.rst
docs/source/datasets/: citeseq.rst  multiome.rst
mudatasets/: __init__.py  core.py  utils.py
mudatasets/datasets/: brain3k_multiome.py  brain9k_multiome.py  pbmc10k_multiome.py  pbmc3k_multiome.py  pbmc5k_citeseq.py
