[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "mudatasets"
author = "Danila Bredikhin"
author-email = "danila.bredikhin@embl.de"
description-file = "README.md"
home-page = "https://github.com/gtca/mudatasets"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Intended Audience :: Science/Research"
]
requires-python = ">= 3.7"
requires = [
    "mudata",
    "tqdm",
    "requests"
]

[tool.flit.metadata.requires-extra]
docs = [
    "sphinx >= 4.0",
    "sphinx-rtd-theme",
    "readthedocs-sphinx-search",
    "nbsphinx",
    "sphinx_automodapi",
    "insegel"
]
muon = [
    "muon"
]

[tool.flit.metadata.urls]
Documentation = "https://mudata.readthedocs.io/en/latest/"

[tool.flit.sdist]
exclude = [".github", "docs/build"]

[tool.black]
line-length = 100
target-version = ['py37']
